tdf#138615: canonicalize the paths with wildcards, to process long paths

Now that we discontinued support of Windows 7, PathCchCanonicalizeEx is
definitely available.

Change-Id: I38b0ff5b6810dfbd6ee6fe84693f71b8392a1808
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178086
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>